syntax = "proto3";

package go.micro.service.vessel;

service VesselService {
	rpc FindAvailable(Specification) returns (Response) {}
	rpc Create(Vessel) returns (Response) {}
	rpc GetVessels(GetRequest) returns (Response) {}
}

message Vessel {
	string id = 1;
	int32 capacity = 2;
	int32 max_weight = 3;
	string name = 4;
	bool available = 5;
	string owner_id = 6;
}

message Specification {
	int32 capacity = 1;
	int32 max_weight = 2;
}

message GetRequest {}

message Response {
	Vessel vessel = 1;
	repeated Vessel vessels = 2;
	bool created = 3;
}